--- a/index.html
+++ b/index.html
@@ -4,17 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Album Ranker</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Album Ranker</h1>
+  <header>
+    <h1>Album Ranker</h1>
+  </header>
 
-  <!-- Dropdown für die Anzahl der Songs -->
-  <label for="numSongs">Anzahl der Songs: </label>
-  <input type="number" id="numSongs" name="numSongs" min="1" max="50">
+  <main>
+    <div class="input-container">
+      <label for="song-count">Wähle die Anzahl der Songs:</label>
+      <select id="song-count">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+        <option value="19">19</option>
+        <option value="20">20</option>
+      </select>
+    </div>
 
-  <!-- Bereich für die Liste von Songs -->
-  <div id="songListContainer"></div>
+    <div id="song-list"></div>
+  </main>
+
+  <footer>
+    <p>© 2025 Album Ranker</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
