--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
   <h1>Album Ranker</h1>
 
+  <!-- Eingabefeld für den Albumnamen -->
+  <div>
+    <label for="albumName">Album Name:</label>
+    <input type="text" id="albumName" placeholder="Gib den Albumnamen ein">
+  </div>
+
   <!-- Dropdown für die Anzahl der Songs -->
   <label for="numSongs">Anzahl der Songs: </label>
   <input type="number" id="numSongs" name="numSongs" min="1" max="50">
